@@ -1,3 +1,7 @@
+<NOT YET RELEASED>
+----------------
+o Fixes issue #432
+
 1.7 (2012-04-18)
 ----------------
 o Added the possibility to use multiple relationship types on patterns
